bug: 77937 Mobile UI: After login failure, "login" button placed out of screen
- Using max-height for error message panel and enabling scrolling on it
- the changes made to css are not reflected when even after dev-sync. Making changes in login.jsp to respect the debug=1 param while fetching the stylesheet.

Reviewboard url: https://reviewboard.eng.vmware.com/r/392822/

http://bugzilla.zimbra.com/show_bug.cgi?id=77937

Copied from Perforce
 Change: 411194

--- a/WebRoot/css/login.css
+++ b/WebRoot/css/login.css
@@ -196,6 +196,13 @@ FORM {
 	width:250px;
 	@grad(LoginCenterTop,LoginCenterBottom,linear-vertical)@
 }
+
+/* limiting the error message on mobile screen to 40px (approx 3 lines)*/
+.LoginScreen .center-small #ZLoginErrorPanel {
+    max-height: 40px;
+    overflow: auto;
+}
+
 .center-small H1 {
 	margin:10px 20px 20px;
 }
